
[project]
name = "ssh-connector"
version = "0.1.0"
authors = [
  { name="TaeJi-Kim", email="rlaxowl5460@gmail.com" },
]
description = "A CLI tool to easily select and connect to SSH hosts from your config file."
readme = "README.md"
requires-python = ">=3.13.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["ssh", "cli", "automation"]

dependencies = [
    "click",
    "rich",
]

[project.urls]
"Homepage" = "https://github.com/KKamJi98/ssh-connector"
"Bug Tracker" = "https://github.com/KKamJi98/ssh-connector/issues"

[project.scripts]
ssh-connector = "ssh_connector:cli"

[project.optional-dependencies]
dev = [
    "uv",
    "black",
    "isort",
    "pytest",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
pythonpath = "."
