
[project]
name = "ssh-connector"
version = "0.2.0"
authors = [
  { name="TaeJi-Kim", email="rlaxowl5460@gmail.com" },
]
description = "A CLI tool to easily select and connect to SSH hosts from your config file."
readme = "README.md"
requires-python = ">=3.13.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["ssh", "cli", "automation"]

dependencies = [
    "click",
    "rich",
]

[project.urls]
"Homepage" = "https://github.com/KKamJi98/ssh-connector"
"Bug Tracker" = "https://github.com/KKamJi98/ssh-connector/issues"

[project.scripts]
ssh-connector = "ssh_connector:cli"

[project.optional-dependencies]
dev = [
    "uv",
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# 기본 규칙(E, F 등)을 사용합니다. 필요 시 프로젝트 진행 중 조정합니다.

[tool.pytest.ini_options]
pythonpath = "."

[dependency-groups]
dev = [
    "pynvim>=0.5.2",
    "ruff",
    "pytest",
]
